--- a/apps/scanner-web/package.json
+++ b/apps/scanner-web/package.json
@@ -5,6 +5,7 @@
   "description": "Mobile-ready web interface for securely scanning Vender tickets.",
   "scripts": {
     "dev": "next dev",
+    "dev:https": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
