--- a/apps/scanner-web/tsconfig.json
+++ b/apps/scanner-web/tsconfig.json
@@ -11,19 +11,31 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "target": "ES2022",
-    "types": ["bun-types", "node"],
+    "types": [
+      "node"
+    ],
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
-    }
+      "@/*": [
+        "./*"
+      ]
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
-    "**/*.mjs"
+    "**/*.mjs",
+    ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
