--- a/apps/scanner-web/tsconfig.json
+++ b/apps/scanner-web/tsconfig.json
@@ -34,7 +34,7 @@
     "**/*.cjs",
     "**/*.mjs",
     ".next/types/**/*.ts"
-  ],
+, "next.config.js"  ],
   "exclude": [
     "node_modules"
   ]
