--- a/scripts/package.json
+++ b/scripts/package.json
@@ -6,12 +6,18 @@
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "manage": "bun run src/manage_tickets.ts",
     "create-event": "bun run src/create_event.ts",
-    "view-events": "bun run src/view_events.ts"
+    "view-events": "bun run src/view_events.ts",
+    "send-reminders": "bun run src/send_ticket_reminders.ts"
   },
   "devDependencies": {
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@types/node": "^22.18.0",
+    "@types/nodemailer": "^7.0.1",
+    "@types/qrcode": "^1.5.5",
+    "nodemailer": "^7.0.5",
+    "qrcode": "^1.5.4",
     "uuid": "^11.1.0"
   }
 }
