--- a/scripts/package.json
+++ b/scripts/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@types/bun": "^1.3.2",
     "@types/node": "^22.18.0",
     "@types/nodemailer": "^7.0.1",
     "@types/qrcode": "^1.5.5",
